fluxcd/infrastructure/common/resources/linkerd/5-viz-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkerd
  namespace: linkerd-viz
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - linkerd.admin.${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          port: 8084
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkerd-viz-mesh-route
  namespace: linkerd-viz
spec:
  parentRefs:
    - name: linkerd-viz
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: linkerd-viz-allow-mesh
  namespace: linkerd-viz
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: linkerd-viz-mesh-route
  requiredAuthenticationRefs:
    - name: linkerd-viz-all-meshed-clients
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
